--- a/Asset Spec/sdg.unturned.itemmeleeasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.itemmeleeasset, assembly-csharp.json
@@ -136,7 +136,7 @@
         {
             "Key": "SpotLight_Color",
             "Type": "ColorRGBLegacy",
-            "DefaultValue": "#f5df93",
+            "DefaultValue": "f5df93",
             "Description": "Color of the flashlight's beam.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/data/struct/playerspotlightconfig.html#spotlight-color-color-f5df93",
             "Priority": 6,
