--- a/LspServer/LspServer.csproj
+++ b/LspServer/LspServer.csproj
@@ -9,7 +9,18 @@
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
 		<RootNamespace>DanielWillett.UnturnedDataFileLspServer</RootNamespace>
+    <StrongNameKeyPath>C:\Strong Name Keys\UnturnedAssetSpec\UnturnedAssetSpec_LspServer.exe.snk</StrongNameKeyPath>
   </PropertyGroup>
+
+  <PropertyGroup Condition="exists($(StrongNameKeyPath))">
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>$(StrongNameKeyPath)</AssemblyOriginatorKeyFile>
+    <DelaySign>False</DelaySign>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="UnturnedAssetSpec_LspServer.exe.publickey" />
+  </ItemGroup>
 
 	<ItemGroup>
 
@@ -30,6 +41,21 @@
 		<PackageReference Include="DanielWillett.SpeedBytes" Version="1.1.2" />
 
     <ProjectReference Include="../UnturnedAssetSpec/UnturnedAssetSpec.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 </Project>
