--- a/LspServer/LspServer.csproj
+++ b/LspServer/LspServer.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="exists($(StrongNameKeyPath))">
+    <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>$(StrongNameKeyPath)</AssemblyOriginatorKeyFile>
     <DelaySign>False</DelaySign>
