--- a/UnturnedAssetSpec/UnturnedAssetSpec.csproj
+++ b/UnturnedAssetSpec/UnturnedAssetSpec.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="exists($(StrongNameKeyPath))">
+    <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>$(StrongNameKeyPath)</AssemblyOriginatorKeyFile>
     <DelaySign>False</DelaySign>
