--- a/Docs/format/toc.yml
+++ b/Docs/format/toc.yml
@@ -6,7 +6,7 @@ items:
     - href: custom-types.md
     - href: dynamic-values.md
     - href: enums.md
-    - href: equations.md
+    - href: expressions.md
     - href: property-refs.md
     - href: switch-statements.md
 - name: Properties
