--- a/LspServer/LspServer.csproj
+++ b/LspServer/LspServer.csproj
@@ -25,7 +25,9 @@
 
 	<ItemGroup>
 
-		<PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.19.9" />
+    <ProjectReference Include="../UnturnedAssetFileIconHandler/UnturnedAssetFileIconHandler.vcxproj" ReferenceOutputAssembly="false" />
+
+    <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.19.9" />
 
 		<PackageReference Include="System.Text.Json" Version="9.0.11" />
 		<PackageReference Include="System.Collections.Immutable" Version="9.0.11" />
@@ -44,6 +46,12 @@
 
     <ProjectReference Include="../UnturnedAssetSpec/UnturnedAssetSpec.csproj" />
 	</ItemGroup>
+
+  <ItemGroup>
+
+    <Content Include="../x64/$(Configuration)/**" CopyToOutputDirectory="PreserveNewest" Visible="false" />
+
+  </ItemGroup>
 
 	<ItemGroup>
 	  <Compile Update="Properties\Resources.Designer.cs">
